fix: overflow-x hidden

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+	overflow-x: hidden;
 }
 
 html {
@@ -801,6 +802,10 @@ select {
   .book__selected--description {
     width: 100%;
   }
+	
+	.book__price--skeleton {
+		width: 100%;
+	}
 }
 
 
